fix style wrapping with text

--- a/src/resume/resume.css
+++ b/src/resume/resume.css
@@ -26,6 +26,12 @@ img {
   font-style: italic;
 }
 
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 h4 {
   margin-top: 10px;
   margin-bottom: 10px;
